objects/Vertex_Address_Validation__c.object
<CustomObject>
    <description>This Object stores the Vertex Data interfaced from Oracle and is used for Address validation in Customer Registration. Prefix: a21</description>
    <fields>
        <fullName>Geo_City__c</fullName>
        <label>Geo City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Country__c</fullName>
        <label>Geo Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_County__c</fullName>
        <label>Geo County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Postal_Code__c</fullName>
        <label>Geo Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_State__c</fullName>
        <label>Geo State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Geography_ID__c</fullName>
        <label>Oracle Geography ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vertex Validation Data</label>
    <nameField>
        <displayFormat>VRT-{0000000}</displayFormat>
        <label>Vertex Address Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vertex Validation Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>